<resources>
    <string name="app_name">CareBridge</string>
    <string name="detected_items">Detected Pokémon</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="intro_1_title">Gotta catch \'em all!</string>
    <string name="intro_1_desc">This is an experiment that uses state of the art Machine Learning algorithms to identify Pokémon in the provided Image.</string>
    <string name="login_desc">Login for the best experience and the ability to improve the app with personalized feedback.</string>
    <string name="logout_text">Do you wish to log out?</string>
    <string name="login_text">Do you wish to log in?</string>
    <string name="logout_message">Login to provide feedback and improve the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="feedback_notification">Notification for processing the feedback</string>
    <string name="sending_feedback">Sending Feedback</string>
    <string name="feedback_in_progress">Feedback in progress</string>
    <string name="thanks_for_feedback">Thank you for the feedback!</string>
    <string name="feedback_failed">Failed to submit, please retry</string>
    <string name="purchase_success">You\'re awesome and you know it!</string>
    <string name="capture">Tap to Capture!</string>
    <string name="capture_message">For best results, keep the object within the frame</string>
    <string name="sign_in_error">Sign in failed, please check your network connection</string>
    <string name="no_network">No network connection, please retry later</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="date_header_today">Today</string>
    <string name="date_header_yesterday">Yesterday</string>
    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="directions">Directions</string>
    <string name="_4_1">4.1</string>
    <string name="location_address">Location Address</string>
    <string name="location_name">Location Name</string>
    <string name="open">Open</string>
    <string name="_1606">(1606)</string>
    <string-array name="disease_names">
        <item>Fever</item>
        <item>Dengue</item>
        <item>Headache</item>
        <item>Tuberculosis</item>
        <item>Influenza</item>
        <item>Diabetes</item>
    </string-array>
    <string-array name="disease_symptoms">
        <item>
            <![CDATA[
                <b>Common fever symptoms including:</b><br>
                <br>* <b>Feeling unwell:</b> You might feel hot and sweaty, or have chills and shivering.
                <br>* <b>Elevated body temperature:</b> usually caused by an infection.
                <br>* <b>Headache:</b> You might have a headache or body aches
                <br>* <b>Sweating:</b> You might sweat on and off or constantly
                <br>* <b>Flushed face:</b> Your face might be flushed or your skin hot
                <br>* <b>Faster heart rate:</b> Your heart might beat faster than normal
            ]]>
        </item>

        <item>
            <![CDATA[
                <b>Dengue symptoms include:</b><br>
                <br>* <b>Fever:</b> A high fever that usually begins 4–7 days after being bitten by an infected mosquito
                <br>* <b>Pain:</b> Pain behind the eyes, muscle, joint, or bone pain
                <br>* <b>Nausea and vomiting:</b> Gastrointestinal symptoms that may occur
                <br>* <b>Swollen lymph nodes:</b> May be present
                <br>* <b>Rash:</b> A flat, red rash may develop 2–5 days after the fever begins, followed by a second rash of raised bumps 3–6 days after the fever begins
                <br>* <b>Bleeding:</b> Mild bleeding, such as nose or gums bleeding, or easy bruising
            ]]>
        </item>

        <item>
            <![CDATA[
                <b>Some common types of headaches include:</b><br>
                <br>* <b>Tension headache:</b> the most common type of headache, usually caused by tight muscles in the neck, shoulders, scalp, or jaw. Tension headaches are often caused by stress, depression, anxiety, or holding your head in an abnormal position.
                <br>* <b>Migraine:</b> this can cause severe, throbbing pain that usually starts around the eye and temple before spreading to the back of the head. Migraines can also cause nausea, vomiting, and sensitivity to light, sound, or smells.
                <br>* <b>Cluster headache:</b> this start quickly with intense, sharp, or burning pain around or behind one of your eyes. The affected eye may also be red, watery, or have a droopy or swollen eyelid.
            ]]>
        </item>

        <item>
            <![CDATA[
                <b>Symptoms of tuberculosis (TB) include:</b><br>
                <br>* A cough that lasts three weeks or longer
                <br>* Coughing up blood or phlegm
                <br>* Chest pain
                <br>* Weight loss
                <br>* Loss of appetite
                <br>* Fever
                <br>* Chills
            ]]>
        </item>

        <item>
            <![CDATA[
                <b>Symptoms of influenza, or the flu include:</b><br>
                <br>* Fever or feeling feverish
                <br>* Chills or sweats
                <br>* Cough
                <br>* Sore throat
                <br>* Runny or stuffy nose
                <br>* Muscle or body aches and headaches
                <br>* Fatigue
                <br>* Vomiting and diarrhea, more common in children
            ]]>
        </item>

        <item>
            <![CDATA[
                <b>Symptoms of diabetes include:</b><br>
                <br>* <b>Frequent urination:</b> Urinating more than usual, especially at night
                <br>* <b>Excessive thirst:</b> Feeling very thirsty
                <br>* <b>Weight loss:</b> Losing weight without trying
                <br>* <b>Blurred vision:</b> Having blurry vision
                <br>* <b>Fatigue:</b> Feeling very tired
                <br>* <b>low-healing sores:</b> Cuts or ulcers that are slow to heal
                <br>* <b>Frequent infections:</b> Getting a lot of infections, such as gum, skin, and vaginal infections
                <br>* <b>Itchy skin:</b> Itchy skin, usually around the vaginal or groin area
            ]]>
        </item>
    </string-array>
</resources>