<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dragIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/bottom_sheet_graple"
        app:layout_anchorGravity="top|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:text="@string/location_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/icon_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dragIcon" />

    <TextView
        android:id="@+id/location_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:maxLines="2"
        android:text="@string/location_address"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/icon_image"
        app:layout_constraintStart_toStartOf="@+id/location_name"
        app:layout_constraintTop_toBottomOf="@+id/location_name" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/_4_1"
        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/location_address"
        app:layout_constraintTop_toBottomOf="@+id/location_address" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rating"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toTopOf="@+id/rating" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction"
        app:spanCount="2"
        tools:listitem="@layout/item_image"
        tools:srcCompat="@tools:sample/avatars" />

    <!-- androidx.appcompat.widget.AppCompatButton -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:drawableStart="@drawable/ic_direction"
        android:drawablePadding="8dp"
        android:drawableTint="@color/white"
        android:paddingVertical="10dp"
        android:text="@string/directions"
        app:layout_constraintStart_toStartOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/open_close" />

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dragIcon"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/open_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/open"
        app:layout_constraintStart_toStartOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <TextView
        android:id="@+id/total_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/_1606"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/images_rv"
        app:layout_constraintTop_toBottomOf="@+id/direction" />


</androidx.constraintlayout.widget.ConstraintLayout>